[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymount"
version = "0.0.11"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "module to help you mount and unmount file systems"
readme = "README.md"
license = "MIT"
keywords=[
    "pymount",
    "mount",
    "umount",
    "partition",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pymount"
"Bug Tracker" = "https://github.com/veltzer/pymount/issues"
"Documentation" = "https://veltzer.github.io/pymount"
"Download" = "https://pypi.org/project/pymount/"
"Repository" = "https://github.com/veltzer/pymount"


[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]
